--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-safe-area-context": "^4.1.4",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-step-progress-bar": "^1.0.3",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0"
   },
