Add to cart and Remove from cart

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-step-progress-bar": "^1.0.3",
     "react-native-svg": "^12.3.0",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
