--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native-base": "^3.3.7",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-element-dropdown": "^1.8.4",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.1.4",
